flexc++ (2.04.01)

  * Precompiled headers are rebuilt when their .h or .ih file have changed.

  * New parser, built by bisonc++ V4.14.00.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 20 Mar 2016 10:09:38 +0100

flexc++ (2.04.00)

  * Carlos Bril and Micha de Rijk detected a curious bug resulting in flexc++
    never recognizing its initial character range. E.g, these two rules
        a
        .|\n

    place \t into the 0th character range containing the characters \0 through
    \t. A scanner generated for these two rules echoed \t to cout as an
    unrecognized character when running
        echo '\t' | a.out
    The bug was caused by flexc++ using range numbers rather than offsets in
    dfarow/transitions.cc and dfarow/transit.cc (and related files)

  * Added regression test p19 (regression/p19) to test recurrence of the
    abovementioned bug.

  * The bugfix on Fri Mar 13 (!) 2015 of a bug reported by Wopke Hellinga and
    Mark Redeman reintroduced a problem with handling the lookahead operator,
    causing regression test p02 to fail since then. This version implements an
    alternative fix for the bug reported by Wopke and Mark, which does not
    cause p02 to fail (see parser/lex.cc).

  * Several inconsistencies in the manual were fixed.

  * The source file containing main() was renamed to main.cc (was: flexc++.cc);
    the internal header file for the main program was renamed to main.ih.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 06 Mar 2016 18:30:37 +0100

flexc++ (2.03.04)

  * Fixed a memory leak reported by gendx caused by the missing ScannerBase
    destructor.

  * 'build install' supports an optional LOG: argument: the (relative or
    absolute) path to a installation log file. The environment variable
    FLEXCPP is no longer used.

  * Updated the usage info displayed by `./build', altered the procedure to
    install the files at their final destinations.

  * Icmake files adapted to icmake 8.00.04
