@@ -29,9 +29,9 @@ void usage(string const &program_name)
     "            location of the class header skeleton.\n"
     "   --construction (-K):\n"
     "           write information about the rules and DFA-creation on\n"
-    "           'infile'.output\n"
+    "           'infile'.output.\n"
     "   --debug (-d):\n"
-    "           generates debug output statements in the lex function\n"
+    "           provides the generated lex function with debug statements\n"
     "   --filenames=<basename> (-f):\n"
     "           use 'basename' instead of 'Scanner' for generated files\n"
     "   --force-class-header:\n"
@@ -65,6 +65,10 @@ void usage(string const &program_name)
     "   --no-lines:\n"
     "            do not add #line preprocessor directives to the lex "
                                                             "function.\n"
+    "   --own-parser (-P):\n"
+    "           flexc++ writes the actions of its own parser to the "
+                                                            "standard\n"
+    "           output stream.\n"
     "   --own-tokens (-T):\n"
     "           flexc++ displays the tokens and their corresponding\n"
     "           matched text it received from its own lexcial scanner.\n"
